# support-bot-integration-test-kit

./: .env.example  .gitignore  README.md
dropin/itk/: .env.example  .gitignore  README_WORK_REPO.md  pyproject.toml  setup.py
dropin/itk/_merge_to_repo_root/: .env.itk.example  ITK_SETUP.md
dropin/itk/artifacts/: generated-fixture.jsonl  invalid.yaml
dropin/itk/cases/: README.md  agent_gatekeeper_basic.yaml  agent_model_invocation.yaml  demo-failure-001.yaml  demo-warning-001.yaml  example-001.yaml  lambda_direct_invoke.yaml  live-agent-test.yaml  live-haiku-001.yaml  my-first-test.yaml  sqs_basic_message.yaml  sqs_retry_scenario.yaml  test-draft-version.yaml  test-latest-version.yaml
dropin/itk/examples/: README.md
dropin/itk/infra/: README.md  bedrock-policy.json  debug_agent_trace.py  lambda-trust.json  mfa-auth.ps1  setup-agents.ps1  setup-all.ps1  setup-iam.ps1  setup-lambda.ps1  setup-quick.ps1  setup-sqs.ps1  teardown-all.ps1  test-input.json  test-output.json  test_agents.py  test_model.py  test_supervisor.py  trace_test.py
dropin/itk/planning/: INTEGRATION_CHECKLIST.md  README.md  ROADMAP.md  TODO.md  WORK_ITEM_TEMPLATE.md
dropin/itk/schemas/: itk.case.schema.json  itk.config.defaults.json  itk.config.schema.json  itk.span.schema.json  itk.targets.schema.json  itk.tier3-task.schema.json
dropin/itk/scripts/: bootstrap.ps1  bootstrap.sh  generate_demo.py  install_copilot_instructions.py  prove_it.ps1  prove_it_e2e.ps1  safety_check.py
dropin/itk/tests/: conftest.py  test_audit.py  test_bootstrap.py  test_cli_offline.py  test_compare.py  (+24 more)
(+147 files in other folders)
